# MARKET-DATA-COLLECTION

./: .env.example  .gitignore  CLIENT_INTEGRATION_GUIDE.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff_errors.json  ruff_errors.txt  seed_db.py  temp_black_tests.txt  temp_pytest.txt  temp_ruff_tests.txt
.agent/skills/bugfix-regression-test/: SKILL.md
.agent/skills/query-by-text-guardrails/: SKILL.md
.agent/skills/timescaledb-dedupe-migration/: SKILL.md
.github/workflows/: ci.yml
api/: __init__.py  errors.py  llm.py  main.py
api/routers/: auth.py  market_data.py
core/: __init__.py  models.py  schemas.py  security.py
db/: __init__.py  crud.py  database.py  init.sql  inserter.py  timescale.py
db/migrations/: 001_add_unique_constraint_ohlcv.sql
fetchers/: __init__.py  binance.py
services/: ingest.py
tests/: conftest.py  test_health.py  test_incremental_ingest.py  test_market_data_api.py  test_models.py  test_query_by_text_api.py  test_upsert_ohlcv.py
workers/: pipeline.py
